--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .employee-card {
     padding: 10 px;
     margin: 10 px;
-    background-color: aqua;
+    background-color:bisque;
     border-radius: 5 px;
     display: inline-block;
 };
